<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DEDDFB"
    tools:context=".ui.authentication.UserSelectionFragment">

    <ImageView
        android:id="@+id/UserSelection_logo"
        android:layout_width="62dp"
        android:layout_height="63dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="188dp"
        android:layout_marginBottom="29dp"
        android:contentDescription="TODO"
        android:src="@drawable/eventhopper_logo"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="62dp"
        android:layout_height="49dp"
        android:layout_marginStart="39dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="60dp"
        android:background="#DEDDFB"
        android:contentDescription="TODO"
        android:src="@drawable/backbuttom"
        app:layout_constraintEnd_toStartOf="@+id/UserSelection_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="258dp"
        android:layout_height="168dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="76dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="77dp"
        android:gravity="top"
        android:lineSpacingExtra="10sp"
        android:text="@string/Begrüßung"
        android:textSize="15sp"
        android:textStyle="italic"
        android:translationY="-4.97sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="414dp"
        android:layout_height="203dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="53dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="TODO"
        android:src="@drawable/media"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <TextView
        android:id="@+id/w_hle_aus"
        android:layout_width="93dp"
        android:layout_height="24dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="159dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="159dp"
        android:layout_marginBottom="21dp"
        android:gravity="top"
        android:lineSpacingExtra="1sp"
        android:text="Wähle aus"
        android:textSize="18sp"
        android:textStyle="bold"
        android:translationY="-0.28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/button2"
        android:layout_width="256dp"
        android:layout_height="39.82dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="77dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="79dp"
        android:background="#BABCF6"
        android:text="@string/veranstalter"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/w_hle_aus" />

    <Button
        android:id="@+id/button"
        android:layout_width="256dp"
        android:layout_height="39.82dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="78dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="77dp"
        android:background="#BABCF6"
        android:text="@string/nutzer"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />


</androidx.constraintlayout.widget.ConstraintLayout>