<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/empfehlung_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authentication.LoginFragment">


    <ImageView
            android:id="@+id/imgHeader_Logo"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="27dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="55dp"
            android:src="@drawable/eventhopper_logo"
            app:layout_constraintEnd_toStartOf="@+id/textHeader_Empfehlung"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            android:alpha="0.6"
            app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgHeader_calender"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="24dp"
        android:clipToOutline="true"
        android:alpha="0.6"
        android:src="@drawable/calendar_month"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgHeader_Logo" />

    <TextView
        android:id="@+id/textHeader_Empfehlung"
        android:layout_width="135dp"
        android:layout_height="21dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="47dp"
        android:layout_marginEnd="152dp"
        android:gravity="top"
        android:lineSpacingExtra="-6sp"
        android:text="@string/empfehlung_in_k_ln"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        android:alpha="0.6"
        app:layout_constraintBottom_toTopOf="@+id/textHeader_Tage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textHeader_Tage"
        android:layout_width="188dp"
        android:layout_height="26dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="14dp"
        android:alpha="0.6"
        android:text="Heute Morgen Fr Sa So"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/imgHeader_Map"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/imgHeader_calender"
        app:layout_constraintTop_toBottomOf="@+id/textHeader_Empfehlung"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imgHeader_Map"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="84dp"
        android:layout_marginBottom="73dp"
        android:src="@drawable/pin_drop"
        android:alpha="0.6"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="126dp"
        android:layout_height="24dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="24dp"
        android:text="@string/gerade_online"
        android:textStyle="bold"
        android:alpha="0.6"
        app:layout_constraintEnd_toStartOf="@+id/suche_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgHeader_calender" />

    <ImageView
        android:id="@+id/suche_image"
        android:layout_width="24sp"
        android:layout_height="24sp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="55dp"
        android:src="@drawable/search_24px"
        android:alpha="0.6"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textHeader_Tage"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/chatt_anzeige"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="55dp"
        android:alpha="0.6"
        android:src="@drawable/baseline_message_24"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintStart_toEndOf="@+id/suche_image"
        app:layout_constraintTop_toBottomOf="@+id/textHeader_Tage"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="55dp"
        android:alpha="0.6"
        android:src="@drawable/baseline_more_vert_24"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toStartOf="@+id/imgHeader_Map"
        app:layout_constraintTop_toBottomOf="@+id/textHeader_Tage"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/iv_chat_contact_image"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="24dp"
        android:alpha="0.6"
        android:layout_marginBottom="1dp"
        android:src="@drawable/statusanzeige"
        app:layout_constraintBottom_toTopOf="@+id/filter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgHeader_calender"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/filter"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:alpha="0.6"
        android:layout_marginStart="29dp"
        android:layout_marginBottom="27dp"
        android:src="@drawable/baseline_tune_24"
        app:layout_constraintBottom_toTopOf="@+id/text_empfehlung"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="286dp"
        android:layout_height="29dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="57dp"
        android:layout_marginBottom="24dp"
        android:alpha="0.6"
        android:text="@string/party_kino_konzerte_flohmarkt"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/text_empfehlung"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/filter" />

    <TextView
        android:id="@+id/text_empfehlung"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="118dp"
        android:text="Empfehlung des Tages"
        android:alpha="0.6"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />


    <ImageView
        android:id="@+id/imageView75"
        android:layout_width="84dp"
        android:layout_height="55dp"
        android:layout_marginStart="116dp"
        android:layout_marginBottom="16dp"
        android:alpha="0.6"
        android:src="@drawable/statusanzeige1"
        app:layout_constraintBottom_toTopOf="@+id/filter"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView76"
        android:layout_width="80dp"
        android:layout_height="56dp"
        android:layout_marginStart="212dp"
        android:layout_marginBottom="12dp"
        android:alpha="0.6"
        android:src="@drawable/statusanzeige2"
        app:layout_constraintBottom_toTopOf="@+id/filter"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView77"
        android:layout_width="79dp"
        android:layout_height="50dp"
        android:layout_marginStart="300dp"
        android:alpha="0.6"
        android:layout_marginBottom="12dp"
        android:src="@drawable/statusanzeige4"
        app:layout_constraintBottom_toTopOf="@+id/filter"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/vie_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent=".78"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">


        <ImageView
            android:id="@+id/imageView45"
            android:layout_width="80dp"
            android:layout_height="66dp"
            android:layout_marginStart="11dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imageView53"
            app:layout_constraintStart_toEndOf="@+id/imageView73"
            app:srcCompat="@drawable/google" />

        <ImageView
            android:id="@+id/imageView53"
            android:layout_width="80dp"
            android:layout_height="66dp"
            android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.716"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/facebook" />

        <ImageView
            android:id="@+id/imageView73"
            android:layout_width="80dp"
            android:layout_height="66dp"
            android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.154"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/twitter" />

        <Button
            android:id="@+id/button3"
            android:layout_width="207dp"
            android:layout_height="48dp"
            android:layout_marginStart="89dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="115dp"
            android:background="#00FFFFFF"
            android:text="@string/forgot_password"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_password_edit"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="log in now!"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.441"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="HardcodedText" />

        <EditText
            android:id="@+id/login_email_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="86dp"
            android:layout_marginTop="96dp"
            android:layout_marginEnd="115dp"
            android:autofillHints=""
            android:ems="10"
            android:gravity="center"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/title_text" />

        <EditText
            android:id="@+id/login_password_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="86dp"
            android:layout_marginEnd="115dp"
            android:autofillHints=""
            android:ems="10"
            android:gravity="center"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_email_edit" />


        <Button
            android:id="@+id/login_button"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="86dp"
            android:layout_marginTop="21dp"
            android:layout_marginEnd="115dp"
            android:text="@string/login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button3" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_signup_button"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="86dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="115dp"
            android:text="@string/sign_up"
            android:textColor="#512DA8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_button" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>







